# Olympus

./: .env.example  .gitignore  .replit  README.md  chat_window.py  control_center.py  docker-compose.yml  free-agent-code.md  langgraph.json  main.py  package-lock.json  package.json  pyproject.toml  referral_triage_prompt.txt  replit.md  requirements.txt  run_balanced.sh  run_keepalive.sh  start.sh  test_setup.py  visualize_graph.py
.github/: copilot-instructions.md
attached_assets/: content-1774620896189.md
demo-runner/: style.css
game-starter/: README.md  game.js  index.html
migrations/: env.py
migrations/versions/: 3bc1025bcab0_init.py  d0abae2a98f9_add_agents_folders_assignments.py
scripts/: keepalive_supervisor.py
src/: __init__.py  agent.py  api_server.py  context_acquisition.py  database.py  ethics.py  flash_orchestrator.py  graph.py  models.py  multi_agent.py  nodes.py  ollama_runtime.py  persistence.py  process_orchestrator.py  prompt_orchestrator.py  session_manifest.py  subagents.py  thermal.py  tools.py
tests/: test_agent.py  test_orchestrator.py  test_performance_safety.py  test_persistence_backend.py  test_security_hardening.py
thunder-client/: README.md  langgraph-app.postman_collection.json  langgraph-local.postman_environment.json
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
ui/src/: App.tsx  Landing.tsx  api.ts  landing.css  main.tsx  styles.css  types.ts
ui/src/components/: AgentAssigner.tsx  AgentList.tsx  FolderManager.tsx  SubAgentPanel.tsx
